RESOLVED FIXED166881
:active and :hover states may not be updated across slots
https://bugs.webkit.org/show_bug.cgi?id=166881
Summary :active and :hover states may not be updated across slots
Ryosuke Niwa
Reported 2017-01-10 00:48:11 PST
When using shadow roots and slots, :active and :hover states may get out of sync.
Attachments
Fixes the bug (9.92 KB, patch)
2017-01-10 01:08 PST, Ryosuke Niwa
no flags
Archive of layout-test-results from ews100 for mac-elcapitan (973.61 KB, application/zip)
2017-01-10 02:19 PST, Build Bot
no flags
Archive of layout-test-results from ews112 for mac-elcapitan (1.62 MB, application/zip)
2017-01-10 02:36 PST, Build Bot
no flags
Archive of layout-test-results from ews105 for mac-elcapitan-wk2 (1.02 MB, application/zip)
2017-01-10 03:56 PST, Build Bot
no flags
Fixed a bug in parentElementInComposedTree (10.05 KB, patch)
2017-01-10 12:52 PST, Ryosuke Niwa
koivisto: review+
Radar WebKit Bug Importer
Comment 1 2017-01-10 00:48:53 PST
Ryosuke Niwa
Comment 2 2017-01-10 01:08:20 PST
Created attachment 298450 [details] Fixes the bug
Build Bot
Comment 3 2017-01-10 02:19:51 PST
Comment on attachment 298450 [details] Fixes the bug Attachment 298450 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/2863079 New failing tests: fast/css/hover-active-drag.html
Build Bot
Comment 4 2017-01-10 02:19:56 PST
Created attachment 298452 [details] Archive of layout-test-results from ews100 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews100 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Build Bot
Comment 5 2017-01-10 02:36:51 PST
Comment on attachment 298450 [details] Fixes the bug Attachment 298450 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/2863114 New failing tests: fast/css/hover-active-drag.html
Build Bot
Comment 6 2017-01-10 02:36:56 PST
Created attachment 298453 [details] Archive of layout-test-results from ews112 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews112 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Build Bot
Comment 7 2017-01-10 03:56:04 PST
Comment on attachment 298450 [details] Fixes the bug Attachment 298450 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/2863411 New failing tests: fast/css/hover-active-drag.html
Build Bot
Comment 8 2017-01-10 03:56:10 PST
Created attachment 298455 [details] Archive of layout-test-results from ews105 for mac-elcapitan-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews105 Port: mac-elcapitan-wk2 Platform: Mac OS X 10.11.6
Ryosuke Niwa
Comment 9 2017-01-10 12:52:02 PST
Created attachment 298505 [details] Fixed a bug in parentElementInComposedTree
Antti Koivisto
Comment 10 2017-01-10 12:56:57 PST
Comment on attachment 298505 [details] Fixed a bug in parentElementInComposedTree View in context: https://bugs.webkit.org/attachment.cgi?id=298505&action=review > Source/WebCore/ChangeLog:11 > + and parentNode. Fixed the bug by using parentOrShadowHostElement instead since :hover and :active I think you mean 'parentElementInComposedTree'.
Ryosuke Niwa
Comment 11 2017-01-10 15:35:54 PST
Note You need to log in before you can comment on or make changes to this bug.