:active and :hover states may not be updated across slots https://bugs.webkit.org/show_bug.cgi?id=166881 <rdar://problem/29944582>

Reviewed by Antti Koivisto.

Source/WebCore:

The bug was caused by updateHoverActiveState not updating :hover and :active states on elements
when nodes are assigned to slots because they were walking up the tree using parentOrShadowHostElement
and parentNode. Fixed the bug by using parentElementInComposedTree instead since :hover and :active
states need to be updated in accordance with the render tree, which is created from the "flat tree"
or the "composed tree" in WebKit's terminology (this is old terminology in the spec).

Tests: fast/shadow-dom/clear-active-state-in-shadow.html
       fast/shadow-dom/hover-over-nested-slotted-content.html

* dom/Document.cpp:
(WebCore::Document::updateHoverActiveState): Fixed the bug.
* dom/Node.cpp:
(WebCore::Node::parentElementInComposedTree): Added.
* dom/Node.h:

LayoutTests:

Added two regression tests; one for clearing :active state across a slot, and another one for clearing
a hover state on an ancestor of a slot to which a slot with the hovered element is assigned.

* fast/shadow-dom/clear-active-state-in-shadow-expected.html: Added.
* fast/shadow-dom/clear-active-state-in-shadow.html: Added.
* fast/shadow-dom/hover-over-nested-slotted-content-expected.html: Added.
* fast/shadow-dom/hover-over-nested-slotted-content.html: Added.
* platform/ios-simulator/TestExpectations:


Canonical link: https://commits.webkit.org/184009@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@210564 268f45cc-cd09-0410-ab3c-d52691b4dbfc